k8s/easyshop-deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: easyshop-deployment
  namespace: easyshop

spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyshop-app

  template:
    metadata:
      name: easyshop-pod
      namespace: easyshop
      labels:
        app: easyshop-app

    spec:
      containers:
        - name: easyshop
          image: nitingumberdev/easyshop-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000 

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          startupProbe:
              httpGet:
                path: /
                port: 3000
              failureThreshold: 30
              periodSeconds: 10

          readinessProbe:
              httpGet:
                path: /
                port: 3000
              initialDelaySeconds: 20
              periodSeconds: 15
        
          livenessProbe:
              httpGet:
                path: /
                port: 3000
              initialDelaySeconds: 25
              periodSeconds: 20
