k8s/easyshop-service.yml
kind: Service
apiVersion: v1

metadata:
  name: easyshop-service
  namespace: easyshop

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: easyshop-app
